--- a/FruitsDiet/Base.lproj/Main.storyboard
+++ b/FruitsDiet/Base.lproj/Main.storyboard
@@ -1,22 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<<<<<<< HEAD
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" colorMatched="YES" initialViewController="nqF-iS-fDg">
-    <device id="retina4_7" orientation="portrait">
-=======
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="R4z-dD-oNF">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="R4z-dD-oNF">
     <device id="ipad9_7" orientation="portrait">
->>>>>>> 724a3147b008c2d31b611306baecd6442b87509e
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-<<<<<<< HEAD
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
-=======
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
->>>>>>> 724a3147b008c2d31b611306baecd6442b87509e
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -29,20 +20,11 @@
                         <viewControllerLayoutGuide type="bottom" id="msf-BV-mZ9"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-<<<<<<< HEAD
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="6g5-rg-duP">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-=======
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="6g5-rg-duP">
                                 <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
->>>>>>> 724a3147b008c2d31b611306baecd6442b87509e
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="nZD-Vl-BMI">
                                     <size key="itemSize" width="252" height="334"/>
@@ -52,11 +34,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CellIdentifier" id="z5H-yY-Rix" customClass="FruitCell" customModule="FruitsDiet" customModuleProvider="target">
-<<<<<<< HEAD
-                                        <rect key="frame" x="0.0" y="50" width="182" height="182"/>
-=======
                                         <rect key="frame" x="0.0" y="50" width="252" height="334"/>
->>>>>>> 724a3147b008c2d31b611306baecd6442b87509e
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                             <rect key="frame" x="0.0" y="0.0" width="252" height="334"/>
@@ -92,11 +70,7 @@
                                     </collectionViewCell>
                                 </cells>
                                 <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="top" restorationIdentifier="HeaderView" reuseIdentifier="HeaderView" id="oPi-dl-DJ8" customClass="FruitsHeaderView" customModule="FruitsDiet" customModuleProvider="target">
-<<<<<<< HEAD
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
-=======
                                     <rect key="frame" x="0.0" y="0.0" width="768" height="50"/>
->>>>>>> 724a3147b008c2d31b611306baecd6442b87509e
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vMC-aH-dOj">
@@ -113,13 +87,8 @@
                                     </connections>
                                 </collectionReusableView>
                             </collectionView>
-<<<<<<< HEAD
-                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="t1V-Ks-BPZ">
-                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
-=======
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="t1V-Ks-BPZ">
                                 <rect key="frame" x="0.0" y="980" width="768" height="44"/>
->>>>>>> 724a3147b008c2d31b611306baecd6442b87509e
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Iqw-ZX-Wrp"/>
@@ -132,15 +101,12 @@
                             </toolbar>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-<<<<<<< HEAD
-=======
                         <constraints>
                             <constraint firstItem="6g5-rg-duP" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="top" id="CmL-XK-evL"/>
                             <constraint firstAttribute="trailing" secondItem="6g5-rg-duP" secondAttribute="trailing" id="Dhq-1f-hSH"/>
                             <constraint firstAttribute="bottom" secondItem="6g5-rg-duP" secondAttribute="bottom" id="IXq-UC-5uA"/>
                             <constraint firstItem="6g5-rg-duP" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leading" id="dat-0g-hIG"/>
                         </constraints>
->>>>>>> 724a3147b008c2d31b611306baecd6442b87509e
                     </view>
                     <navigationItem key="navigationItem" id="HTX-Bs-yCy">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="dwd-ad-o1E">
@@ -156,11 +122,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-<<<<<<< HEAD
-            <point key="canvasLocation" x="465" y="307"/>
-=======
             <point key="canvasLocation" x="-80.46875" y="716.015625"/>
->>>>>>> 724a3147b008c2d31b611306baecd6442b87509e
         </scene>
         <!--Detail View Controller-->
         <scene sceneID="J3f-wn-IPX">
@@ -171,17 +133,6 @@
                         <viewControllerLayoutGuide type="bottom" id="4fA-Q3-Evb"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="VYM-SW-8e5">
-<<<<<<< HEAD
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="3lu-4x-BYj">
-                                <rect key="frame" x="33" y="187" width="309" height="353"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </imageView>
-                        </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-=======
                         <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -196,7 +147,6 @@
                             <constraint firstAttribute="trailing" secondItem="3lu-4x-BYj" secondAttribute="trailing" id="ccW-sh-4g7"/>
                             <constraint firstItem="3lu-4x-BYj" firstAttribute="leading" secondItem="VYM-SW-8e5" secondAttribute="leading" id="sa1-oH-bdS"/>
                         </constraints>
->>>>>>> 724a3147b008c2d31b611306baecd6442b87509e
                     </view>
                     <navigationItem key="navigationItem" id="8WU-Iu-w6t"/>
                     <connections>
@@ -205,9 +155,6 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hwX-KP-Xbw" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-<<<<<<< HEAD
-            <point key="canvasLocation" x="1034" y="307"/>
-=======
             <point key="canvasLocation" x="828.125" y="716.015625"/>
         </scene>
         <!--Home-->
@@ -267,12 +214,12 @@
                     <connections>
                         <segue destination="mNH-tr-lIx" kind="relationship" relationship="viewControllers" id="uat-ft-WE1"/>
                         <segue destination="nqF-iS-fDg" kind="relationship" relationship="viewControllers" id="4dA-wK-3D2"/>
+                        <segue destination="s3m-1F-3E5" kind="relationship" relationship="viewControllers" id="s15-2J-gwz"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jlU-zG-G4M" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1867.2" y="213.19340329835086"/>
->>>>>>> 724a3147b008c2d31b611306baecd6442b87509e
         </scene>
         <!--FruitsDiet-->
         <scene sceneID="LoS-fZ-KA0">
@@ -291,10 +238,60 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pJo-Sw-hoV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-<<<<<<< HEAD
-            <point key="canvasLocation" x="-3" y="307"/>
-=======
             <point key="canvasLocation" x="-1030.4000000000001" y="716.04197901049486"/>
+        </scene>
+        <!--ColorFulSection-->
+        <scene sceneID="r7D-EV-rJc">
+            <objects>
+                <collectionViewController id="s3m-1F-3E5" customClass="ColorFul_CollectionVC" customModule="FruitsDiet" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" dataMode="prototypes" id="kJB-3N-qwY">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hxx-m5-Pf9">
+                            <size key="itemSize" width="144" height="142"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="Number_CollectionViewCell_ReuseID" id="M0a-Hy-TGH" customClass="Number_CollectionViewCell" customModule="FruitsDiet" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="144" height="142"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="0.0" y="0.0" width="144" height="142"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="9" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHa-AV-GPO">
+                                            <rect key="frame" x="56" y="38" width="33.5" height="66"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="55"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="bHa-AV-GPO" firstAttribute="centerX" secondItem="M0a-Hy-TGH" secondAttribute="centerX" id="Kem-dD-pZW"/>
+                                    <constraint firstItem="bHa-AV-GPO" firstAttribute="centerY" secondItem="M0a-Hy-TGH" secondAttribute="centerY" id="pXm-RW-HJ1"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="Number_Label" destination="bHa-AV-GPO" id="04i-O3-8MU"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="s3m-1F-3E5" id="7c2-g6-4jS"/>
+                            <outlet property="delegate" destination="s3m-1F-3E5" id="EEu-Cy-3tu"/>
+                        </connections>
+                    </collectionView>
+                    <tabBarItem key="tabBarItem" title="ColorFulSection" id="pVH-ou-ZR6"/>
+                    <connections>
+                        <outlet property="collectionView" destination="kJB-3N-qwY" id="2u7-pw-N0H"/>
+                    </connections>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cna-wf-gA7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1868.75" y="917.57812499999989"/>
         </scene>
         <!--Home Page ScrollVC-->
         <scene sceneID="AFt-IN-ggA">
@@ -372,6 +369,10 @@
         <scene sceneID="3ws-kb-S11">
             <objects>
                 <viewController id="1eD-nj-757" customClass="HomeControlMenu_VC" customModule="FruitsDiet" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="uVw-Gh-kix"/>
+                        <viewControllerLayoutGuide type="bottom" id="6Be-Vh-H5S"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3aR-40-HGD">
                         <rect key="frame" x="0.0" y="0.0" width="768" height="669"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -441,12 +442,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WNl-lL-AIo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-268.75" y="152.63671875"/>
->>>>>>> 724a3147b008c2d31b611306baecd6442b87509e
         </scene>
     </scenes>
-    <simulatedMetricsContainer key="defaultSimulatedMetrics">
-        <simulatedStatusBarMetrics key="statusBar"/>
-        <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
-    </simulatedMetricsContainer>
 </document>
